# plugin-ambx

./: Fader.c  Fader.h  Makefile.am  Makefile.in  README.md  ambx.c  ambxgrab.c  ambxlib.c  ambxlib.h  colorproc.c  colorproc.h  configure  configure.ac  filehelper.c  filehelper.h  grab.c  grab.cpp  grabber.h  grabber_ati.c  grabber_bcm7325.c  grabber_bcm7335.c  grabber_bcm7400.c  grabber_bcm7401.c  grabber_bcm7405.c  grabber_common.c  grabber_decodermem.inc  grabber_decodermem2mem.inc  grabber_dm500hd.c  grabber_dm7025.c  grabber_dm800.c  grabber_dm8000.c  grabber_dm800dm500.inc  grabber_dm8kvu.inc  grabber_stub.c  grabber_vuduo.c  testambx.c  unittest.c  xilleon.cpp  xilleon.h  yuvrgb.c  (+1 more)
plugin/: setup.py
plugin/amBX/: plugin.py
python/: pyambx.c  setup.py
